--- a/aula-22-02/index.html
+++ b/aula-22-02/index.html
@@ -15,12 +15,12 @@
                   <h2> Section 1</h2>  
             </section>
             <section>
-                <h2> Section 1</h2>
+                <h2> Section 2</h2>
             </section>
-            <aside class="asside1">
+            <aside class="aside1">
                 <h2> Aside 1</h2>
             </aside>
-            <aside class="asside2">
+            <aside class="aside2">
                 <h2> Aside 2</h2>
             </aside>
         </main>
