--- a/aula04-03/minilicao/index.html
+++ b/aula04-03/minilicao/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <button onclick="calcularDesconto()">QUESTÃO 01</button>
-    <button onclick="calcularDesconto()">QUESTÃO 02</button>
-    <button onclick="calcularDesconto()">QUESTÃO 03</button>
-    <button onclick="calcularDesconto()">QUESTÃO 04</button>
+    <button onclick="convCelsiusFare()">QUESTÃO 02</button>
+    <button onclick="calculaAreaPerimetroRetangulo()">QUESTÃO 03</button>
+    <button onclick="calcularIdade()">QUESTÃO 04</button>
     
 <script src="script.js"></script>
 </body>
