--- a/aula04-03/minilicao/index.html
+++ b/aula04-03/minilicao/index.html
@@ -24,17 +24,37 @@
         </section>
         <section>
             <h2>Questão 02</h2>
-            <p>Calculadora de descontos</p>
+            <p>Converter Temperatura</p>
             <div>
-                <label for="preco2">Digite o preço do Produto:</label>
-                <input type="number" id="preco2" name="preco2">
+                <label for="celsius">Digite a temperatura:</label>
+                <input type="number" id="celsius" name="celsius">
             </div>
-            <div>
-                <label for="desconto2">Digite o Desconto:</label>
-                <input type="number" id="desconto2" name="desconto2">
-            </div>
-            <button>Calcular</button>
+            <button id="questao02">Calcular</button>
             <p id="resultado02"></p>
+        </section>
+        <section>
+            <h2>Questão 03</h2>
+            <p>Calcular Área  e Perimetro</p>
+            <div>
+                <label for="base">Digite a Base:</label>
+                <input type="number" id="base" name="base">
+            </div>
+            <div>
+                <label for="altura">Digite a altura:</label>
+                <input type="number" id="altura" name="altura">
+            </div>
+            <button id="questao03">Calcular</button>
+            <p id="resultado03"></p>
+        </section>
+        <section>
+            <h2>Questão 04</h2>
+            <p>Calcular Idade</p>
+            <div>
+                <label for="anoNascimento">Digite o ano de nascimento:</label>
+                <input type="number" id="anoNascimento" name="anoNascimento">
+            </div>
+            <button id="questao04">Calcular</button>
+            <p id="resultado04"></p>
         </section>
         <!-- Adicione mais seções conforme necessário, atualizando os ids e names dos inputs -->
     </main>
