Atualização do To Do List

--- a/aula-11-03/todolist.html
+++ b/aula-11-03/todolist.html
@@ -21,6 +21,6 @@
             </ul>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="script2vetor.js"></script>
 </body>
 </html>
