--- a/aula19-03/aula19-03.html
+++ b/aula19-03/aula19-03.html
@@ -12,9 +12,9 @@
     </header>
     <main>
         <section>
-            <article>
+            <article >
                 <h2>Login</h2>
-                <div>
+                <div class="login">
                     <form action="">
                         <label for="usuario">Usuário</label>
                         <input type="text" id="usuario" name="usuario">
@@ -26,7 +26,7 @@
                 </div>
             </article>
             <article>
-                <div>
+                <div class="cadastro">
                     <form action="">
                         <label for="usuario">Usuário:</label>
                         <input type="text" name="usuario" id="usuario">
