É hora do duelo

--- a/aula19-03/aula19-03.html
+++ b/aula19-03/aula19-03.html
@@ -20,7 +20,7 @@
                         <input type="text" id="usuario" name="usuario">
                         <label for="senha">Senha</label>
                         <input type="password" name="senha" id="senha">
-                        <button type="submit"> Entrar </button>
+                        <button type="submit" class="botao"> Entrar </button>
                     </form>
                     <p>Esqueci a senha.</p>
                 </div>
@@ -28,15 +28,26 @@
             <article>
                 <div class="cadastro">
                     <form action="">
-                        <label for="usuario">Usuário:</label>
-                        <input type="text" name="usuario" id="usuario">
-                        <label for="email">E-mail:</label>
-                        <input type="email" id="email" name="email">
-                        <label for="senha">Senha:</label>
-                        <input type="password" id="senha" name="senha">
+                        <div>
+                            <label for="usuario">Usuário:</label>
+                            <input type="text" name="usuario" id="usuario">
+                       </div> 
+                        <div>
+                            <label for="email">E-mail:</label>
+                             <input type="email" id="email" name="email">
+                       </div>
+                       <div>
+                            <label for="senha">Senha:</label>
+                             <input type="password" id="senha" name="senha">
+                       </div>
+                       <div>
                         <label for="confirmarSenha">Confirmar Senha:</label>
                         <input type="password" id="confirmarSenha" name="confirmarSenha">
-                        <button type="submit">Cadastre-se</button>
+                       </div>
+                       <div>
+                        <button class="botao" type="submit">Cadastre-se</button>
+                       </div>
+                       
                     </form>
                 </div>
             </article>
