Cadastro OK - falta o  login

--- a/aula19-03/aula19-03.html
+++ b/aula19-03/aula19-03.html
@@ -26,8 +26,8 @@
                 </div>
             </article>
             <article>
-                <div class="cadastro">
-                    <form>
+                <div class="cadastro" >
+                    <form method="post" action="">
                         <div>
                             <label for="usuario">Usuário:</label>
                             <input type="text" name="cadUsuario" id="cadUsuario" required>
@@ -45,7 +45,7 @@
                         <input type="password" id="confirmarSenha" name="confirmarSenha" required>
                        </div>
                        <div>
-                        <button class="botao" type="submit">Cadastre-se</button>
+                        <button class="botao">Cadastre-se</button>
                        </div>
                        
                     </form>
