Falta resolver um bug sucinto no login

--- a/aula19-03/aula19-03.html
+++ b/aula19-03/aula19-03.html
@@ -15,7 +15,7 @@
             <article >
                 <h2>Login</h2>
                 <div class="login">
-                    <form action="">
+                    <form action="" method="post">
                         <label for="usuario">Usuário</label>
                         <input type="text" id="usuario" name="usuario">
                         <label for="senha">Senha</label>
@@ -45,7 +45,7 @@
                         <input type="password" id="confirmarSenha" name="confirmarSenha" required>
                        </div>
                        <div>
-                        <button class="botao">Cadastre-se</button>
+                            <button class="botao">Cadastre-se</button>
                        </div>
                        
                     </form>
