--- a/aula19-03/aula19-03.html
+++ b/aula19-03/aula19-03.html
@@ -17,9 +17,9 @@
                 <div class="login">
                     <form action="" method="post">
                         <label for="usuario">Usuário</label>
-                        <input type="text" id="usuario" name="usuario">
+                        <input type="text" id="usuario" name="usuario" required>
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha">
+                        <input type="password" name="senha" id="senha" required>
                         <button type="submit" class="botao"> Entrar </button>
                     </form>
                     <p>Esqueci a senha.</p>
